--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
     />
 
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
     <script src="script.js" defer></script>
 
     <!-- Your name here -->
@@ -82,8 +83,6 @@
         <ol class="nav-items">
           <li class="nav-item"><a href="#">Home</a></li>
           <li class="nav-item"><a href="#work">My Work</a></li>
-          <li class="nav-item"><a href="#blog">See Blog</a></li>
-          <li class="nav-item"><a href="#skills">My Skills</a></li>
           <li class="nav-item">
             <a href="#contact" data-focused="last-focused">Contact</a>
           </li>
@@ -223,7 +222,7 @@
 
                 <div class="work-links">
                   <!-- Add url of project in href attribute -->
-                  <a href="https://github.com/jdiffy47" target="_blank" rel="noopener" class="link"
+                  <a href="https://github.com/jdiffy47/my-portfolio" target="_blank" rel="noopener" class="link"
                     >Explore this project</a
                   >
 
@@ -462,17 +461,22 @@
       <section class="skills">
         <div class="container">
           <h2 class="h2" id="skills">My Toolkit</h2>
-          <div class="skills-imgs">
-                <img src="assets/images/skills/react.webp" alt="React" class="skills-img" loading="lazy" title="React">
-                <img src="assets/images/skills/svelte.webp" alt="Svelte" class="skills-img" loading="lazy" title="Svelte">
-                 <img src="assets/images/skills/typescript.webp" alt="Typescript" class="skills-img" loading="lazy" title="Typescript">
-                 <img src="assets/images/skills/a11y.webp" alt="Accessibility" class="skills-img" loading="lazy" title="Web Accessibility">
-                 <img src="assets/images/skills/shell.webp" alt="Shell" class="skills-img" loading="lazy" title="Shell">
-                 <img src="assets/images/skills/next-js.webp" alt="NextJS" class="skills-img" loading="lazy" title="NextJS">
-                 <img src="assets/images/skills/graphql.webp" alt="Graph Ql" class="skills-img" loading="lazy" title="Graph QL">
-                 <img src="assets/images/skills/git.webp" alt="Git" class="skills-img" loading="lazy" title="Git">
-                 <img src="assets/images/skills/html.webp" alt="CSS" class="skills-img" loading="lazy" title="CSS">
-                 <img src="assets/images/skills/js.webp" alt="JavaScript" class="skills-img" loading="lazy" title="JavaScript">
+          <div class="skills-imgs">  
+            <i class="devicon-typescript-plain colored"></i>
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" />
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/python/python-original-wordmark.svg" />
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-plain-wordmark.svg" />
+            <i class="devicon-csharp-line colored"></i>  
+            <i class="devicon-react-original-wordmark colored"></i>     
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/dotnetcore/dotnetcore-original.svg" />
+            <i class="devicon-visualstudio-plain-wordmark colored"></i>
+            <i class="devicon-microsoftsqlserver-plain-wordmark"></i>
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mongodb/mongodb-original-wordmark.svg" />
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-original-wordmark.svg" />
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-plain-wordmark.svg" />
+            <i class="devicon-tailwindcss-original-wordmark"></i>
+            <i class="devicon-sass-original colored"></i>
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/figma/figma-original.svg" />
             </figure>
           </div>
         </div>
@@ -608,7 +612,7 @@
               <!-- Please comment this component if you're not available for hire -->
               <strong href="#" class="hire-alert">
                 <span class="indicator"></span>
-                Available For Hire
+                Available For Work
               </strong>
               <p class="contact-text">
                 If you have any inquiries, collaboration opportunities, or just want to connect, feel free to reach out!
