change effect on nav menu

--- a/index.html
+++ b/index.html
@@ -89,6 +89,14 @@
         </ol>
       </nav>
 
+      <div class="slide-in-menu">
+        <ol class="slide-in-items">
+          <li class="slide-in-item"><a href="#">Home</a></li>
+          <li class="slide-in-item"><a href="#work">My Work</a></li>
+          <li class="slide-in-item"><a href="#contact">Contact</a></li>
+        </ol>
+      </div>
+
       <div class="container">
         <div class="header-textbox">
           <!-- Replace with your name and job title -->
