--- a/index.html
+++ b/index.html
@@ -71,34 +71,32 @@
       document.body.classList.add(theme);
     </script>
 
-    <header class="header">
+    <header class="header" id="header">
 
-      <div class="menu-btn-container">
+      <!-- <div class="menu-btn-container">
         <div class="container">
           <button type="button" class="menu-btn">menu</button>
         </div>
-      </div>
+      </div> -->
 
-      <nav class="nav hidden">
+      <nav class="nav" id="nav">
         <ol class="nav-items">
-          <li class="nav-item"><a href="#">Home</a></li>
+          <li class="nav-item"><a href="#header">Home</a></li>
           <li class="nav-item"><a href="#work">My Work</a></li>
-          <li class="nav-item">
-            <a href="#contact" data-focused="last-focused">Contact</a>
-          </li>
+          <li class="nav-item"><a href="#contact">Contact</a></li>
         </ol>
       </nav>
-
-      <div class="slide-in-menu">
+      
+      <!-- <div class="slide-in-menu">
         <ol class="slide-in-items">
-          <li class="slide-in-item"><a href="#">Home</a></li>
+          <li class="slide-in-item"><a href="#header-textbox">Home</a></li>
           <li class="slide-in-item"><a href="#work">My Work</a></li>
           <li class="slide-in-item"><a href="#contact">Contact</a></li>
         </ol>
-      </div>
+      </div> -->
 
       <div class="container">
-        <div class="header-textbox">
+        <div class="header-textbox" id="">
           <!-- Replace with your name and job title -->
           <h1 class="h1">
             Hi, I'm Jake Diefenderfer<br />
@@ -704,7 +702,7 @@
             </ol>
           </nav>
           <p class="footer-text">
-            &copy; 2024 - designed & developed by <a target="_blank" rel="noopener" href="https://github.com/jdiffy47">Jake Diefenderfer</a>
+            &copy; 2024 - Designed & Developed By <a target="_blank" rel="noopener" href="https://github.com/jdiffy47">Jake Diefenderfer</a>
           </p>
           <label class="theme-switch" for="theme-switch">
             <span>Dark Theme</span>
