--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <!-- Update favicon href attribute with image of yourself -->
     <link
       rel="shortcut icon"
-      href="assets/images/favicons.png"
+      href="./assets/images/favicon-selfie.png"
       type="image/png"
     />
 
