remove sharing card

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <meta itemprop="description" content="">
 
 <!-- Reference screenshot of updated site's header in place of content -->
-<meta itemprop="image" content="assets/images/sharing-card.png">
+<meta itemprop="image" content="">
 
 <!-- Facebook Meta Tags -->
 <meta property="og:url" content="">
@@ -28,7 +28,7 @@
 <meta property="og:description" content="">
 
 <!-- Reference screenshot of updated site's header in content -->
-<meta property="og:image" content="assets/images/sharing-card.png">
+<meta property="og:image" content="">
 
 <!-- Twitter Meta Tags -->
 <meta name="twitter:card" content="summary_large_image">
@@ -36,7 +36,7 @@
 <meta name="twitter:description" content="">
 
 <!-- Reference screenshot of updated site's header in content -->
-<meta name="twitter:image" content="assets/images/sharing-card.png">
+<meta name="twitter:image" content="">
 
 
 <!-- Update favicon href attribute with image of yourself -->
