--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
                 <h3 class="h3">Evergreen HVAC</h3>
                 <!-- Add small description of your project  -->
                 <p class="work-text">
-                  Company Website For Local hvac Business
+                  Company Website For Local HVAC Business
                 </p>
                 <ol class="work-technologies">
                   <li>GoDaddy</li>
