add lisbon and dover to work

--- a/index.html
+++ b/index.html
@@ -247,6 +247,37 @@
             <div class="work-box">
               <div class="work-textbox">
                 <!-- Add your project title here -->
+                <h3 class="h3">Lisbon & Dover</h3>
+                <!-- Add small description of your project  -->
+                <p class="work-text">
+                  Interior Designer Portfolio
+                </p>
+                <!-- Add technologies you used to build the project -->
+                <ol class="work-technologies">
+                  <li>Shopify</li>
+                </ol>
+
+                <div class="work-links">
+                  <!-- Add url of project in href attribute -->
+                  <a href="https://lisbonanddover.com/" target="_blank" rel="noopener" class="link"
+                    >Explore this project</a
+                  >
+                </div>
+              </div>
+
+         <!-- Update img src and alt attribute  -->
+
+              <picture class="work-img">
+                <img
+                  loading="lazy"
+                  src="assets/images/work/long-repair-snippet.png"
+                  alt="Longacre Repairs Snippet"
+                />
+              </picture>
+            </div>
+            <div class="work-box">
+              <div class="work-textbox">
+                <!-- Add your project title here -->
                 <h3 class="h3">Portfolio</h3>
                 <!-- Add small description of your project  -->
                 <p class="work-text">
