change image for lisbon and dover

--- a/index.html
+++ b/index.html
@@ -270,8 +270,8 @@
               <picture class="work-img">
                 <img
                   loading="lazy"
-                  src="assets/images/work/long-repair-snippet.png"
-                  alt="Longacre Repairs Snippet"
+                  src="assets/images/work/lisbonanddover-snippet.png"
+                  alt="Lisbon & Dover Snippet"
                 />
               </picture>
             </div>
