add link for evergreen

--- a/index.html
+++ b/index.html
@@ -318,27 +318,14 @@
                 </p>
                 <ol class="work-technologies">
                   <li>GoDaddy</li>
-                  <li>CSS</li>
                 </ol>
                 <div class="work-links">
                   <!-- Add url of project in href attribute -->
-                  <a href="#" target="_blank" rel="noopener" class="link"
+                  <a href="https://evergreenheatcooling.com/" target="_blank" rel="noopener" class="link"
                     >Explore this project</a
                   >
 
                    <!-- Add link to project source code in href attribute if applicable otherwise feel free to delete or comment the markup -->
-                  <a
-                    href="#"
-                    target="_blank"
-                    rel="noopener"
-                    title="Source code"
-                  >
-                    <img
-                      src="assets/images/social-links/github.svg"
-                      alt="GitHub"
-                      loading="lazy"
-                    />
-                  </a>
                 </div>
               </div>
          <!-- Update img src and alt attribute  -->
