change longacre repairs domain link

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
 
                 <div class="work-links">
                   <!-- Add url of project in href attribute -->
-                  <a href="https://longacrerepairs.com/" target="_blank" rel="noopener" class="link"
+                  <a href="https://longacrerepair.com/" target="_blank" rel="noopener" class="link"
                     >Explore this project</a
                   >
                 </div>
